--- a/news.html
+++ b/news.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>WCB Cafe - NEWS</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
         <link rel="icon" type="image/png" href="images/favicon.png"
+        
          
     <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-        <link href="https://fonts.googleeapis.com/css?family=Philosopher" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
 
@@ -72,6 +73,10 @@
                 おいしいブレンドコーヒーとヘルシーなオーガニックフードで体の内側から癒されてください。
             </p>
         </aside>
+
+        <div class="ad">
+            <img src="images/banner.jpg" alt="新メニュー登場">
+        </div>
       </div><!--/.news-contents-->
 
       <footer>
