--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu2.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu2.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
