--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu4.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu4.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
