--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu5.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu5.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
