--- a/menu.html
+++ b/menu.html
@@ -62,7 +62,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu7.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu7.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
