--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu8.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu8.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
