--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
             <p>写真キャプション写真キャプション</p>
          </div>
          <div class="item">
-            <img src="images/menu9.jpg" alt="">
+            <img src="https://github.com/hiro525/c/blob/main/menu9.jpg?raw=true" alt="">
             <p>写真キャプション写真キャプション</p>
          </div>
       </div><!--/.grid-->
