--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>WCB Cafe - MENU</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
-        <link rel="icon" type="image/png" href="images/favicon.png"
+        <link rel="icon" type="image/png" href="https://github.com/hiro525/c/blob/main/favicon.png?raw=true"
         
          
     <!-- CSS -->
