--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="https://github.com/hiro525/c/style.css" rel="stylesheet">
     </head>
 
     <body>
