--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
     <body>
      <div id="menu" class="big-bg">
         <header class="page-header wrapper">
-         <h1><a href="index.html"><img class="logo" src="images/logo.svg" alt="WBCカフェ ホーム"></a></h1>
+         <h1><a href="index.html"><img class="logo" src="https://raw.githubusercontent.com/hiro525/c/00efda2c2ed3942199c61c5ea8d8188d27efeae4/logo.svg" alt="WBCカフェ ホーム"></a></h1>
             <nav>
                 <ul class="main-nav">
                     <li><a href="news.html">News</a></li>
